tests/ui-tests/tests/cases/flatten-fail.stderr
error[E0277]: the trait bound `std::option::Option<Vec<std::option::Option<std::string::String>>>: FlattensInto<Vec<i32>>` is not satisfied
 --> tests/cases/flatten-fail.rs:8:20
  |
8 |     producers_one: Vec<i32>,
  |                    ^^^ the trait `FlattensInto<Vec<i32>>` is not implemented for `std::option::Option<Vec<std::option::Option<std::string::String>>>`
  |
  = help: the following other types implement trait `FlattensInto<T>`:
            <std::option::Option<Vec<T>> as FlattensInto<Vec<T>>>
            <std::option::Option<Vec<std::option::Option<T>>> as FlattensInto<Vec<T>>>
            <std::option::Option<Vec<std::option::Option<T>>> as FlattensInto<std::option::Option<Vec<T>>>>
note: required by a bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`
 --> $WORKSPACE/cynic/src/queries/builders.rs
  |
  |     pub fn select_flattened_field<FieldMarker, Flattened, FieldType>(
  |            ---------------------- required by a bound in this associated function
...
  |         FieldType: FlattensInto<Flattened>,
  |                    ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`

error[E0277]: the trait bound `std::option::Option<Vec<std::option::Option<std::string::String>>>: FlattensInto<std::option::Option<Vec<f64>>>` is not satisfied
  --> tests/cases/flatten-fail.rs:11:20
   |
11 |     producers_two: Option<Vec<f64>>,
   |                    ^^^^^^ the trait `FlattensInto<std::option::Option<Vec<f64>>>` is not implemented for `std::option::Option<Vec<std::option::Option<std::string::String>>>`
   |
   = help: the following other types implement trait `FlattensInto<T>`:
             <std::option::Option<Vec<T>> as FlattensInto<Vec<T>>>
             <std::option::Option<Vec<std::option::Option<T>>> as FlattensInto<Vec<T>>>
             <std::option::Option<Vec<std::option::Option<T>>> as FlattensInto<std::option::Option<Vec<T>>>>
note: required by a bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`
  --> $WORKSPACE/cynic/src/queries/builders.rs
   |
   |     pub fn select_flattened_field<FieldMarker, Flattened, FieldType>(
   |            ---------------------- required by a bound in this associated function
...
   |         FieldType: FlattensInto<Flattened>,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`

error[E0277]: the trait bound `i32: IsOutputScalar<'_, std::string::String>` is not satisfied
 --> tests/cases/flatten-fail.rs:3:10
  |
3 | #[derive(cynic::QueryFragment, Debug, PartialEq)]
  |          ^^^^^^^^^^^^^^^^^^^^ the trait `IsOutputScalar<'_, std::string::String>` is not implemented for `i32`, which is required by `Flattened<ScalarDeserialize<Vec<i32>, std::option::Option<Vec<std::option::Option<std::string::String>>>>>: Deserialize<'de>`
  |
  = help: the trait `IsOutputScalar<'_, i32>` is implemented for `i32`
  = help: for that trait implementation, expected `i32`, found `std::string::String`
  = note: required for `std::option::Option<i32>` to implement `IsOutputScalar<'_, std::option::Option<std::string::String>>`
  = note: 2 redundant requirements hidden
  = note: required for `std::option::Option<Vec<std::option::Option<i32>>>` to implement `IsOutputScalar<'_, std::option::Option<Vec<std::option::Option<std::string::String>>>>`
  = note: required for `Flattened<ScalarDeserialize<Vec<i32>, std::option::Option<Vec<std::option::Option<std::string::String>>>>>` to implement `Deserialize<'de>`
note: required by a bound in `next_value`
 --> $CARGO/serde-1.0.210/src/de/mod.rs
  |
  |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
  |        ---------- required by a bound in this associated function
  |     where
  |         V: Deserialize<'de>,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`
  = note: this error originates in the derive macro `cynic::QueryFragment` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `f64: IsOutputScalar<'_, std::string::String>` is not satisfied
 --> tests/cases/flatten-fail.rs:3:10
  |
3 | #[derive(cynic::QueryFragment, Debug, PartialEq)]
  |          ^^^^^^^^^^^^^^^^^^^^ the trait `IsOutputScalar<'_, std::string::String>` is not implemented for `f64`, which is required by `Flattened<ScalarDeserialize<std::option::Option<Vec<f64>>, std::option::Option<Vec<std::option::Option<std::string::String>>>>>: Deserialize<'de>`
  |
  = help: the trait `IsOutputScalar<'_, f64>` is implemented for `f64`
  = help: for that trait implementation, expected `f64`, found `std::string::String`
  = note: required for `std::option::Option<f64>` to implement `IsOutputScalar<'_, std::option::Option<std::string::String>>`
  = note: 2 redundant requirements hidden
  = note: required for `std::option::Option<Vec<std::option::Option<f64>>>` to implement `IsOutputScalar<'_, std::option::Option<Vec<std::option::Option<std::string::String>>>>`
  = note: required for `Flattened<ScalarDeserialize<std::option::Option<Vec<f64>>, std::option::Option<Vec<std::option::Option<std::string::String>>>>>` to implement `Deserialize<'de>`
note: required by a bound in `next_value`
 --> $CARGO/serde-1.0.210/src/de/mod.rs
  |
  |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
  |        ---------- required by a bound in this associated function
  |     where
  |         V: Deserialize<'de>,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`
  = note: this error originates in the derive macro `cynic::QueryFragment` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::option::Option<Vec<std::option::Option<schema::FilmCharactersEdge>>>: FlattensInto<Vec<std::string::String>>` is not satisfied
  --> tests/cases/flatten-fail.rs:19:16
   |
19 |     edges_one: Vec<String>,
   |                ^^^ the trait `FlattensInto<Vec<std::string::String>>` is not implemented for `std::option::Option<Vec<std::option::Option<schema::FilmCharactersEdge>>>`
   |
   = help: the following other types implement trait `FlattensInto<T>`:
             <std::option::Option<Vec<T>> as FlattensInto<Vec<T>>>
             <std::option::Option<Vec<std::option::Option<T>>> as FlattensInto<Vec<T>>>
             <std::option::Option<Vec<std::option::Option<T>>> as FlattensInto<std::option::Option<Vec<T>>>>
note: required by a bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`
  --> $WORKSPACE/cynic/src/queries/builders.rs
   |
   |     pub fn select_flattened_field<FieldMarker, Flattened, FieldType>(
   |            ---------------------- required by a bound in this associated function
...
   |         FieldType: FlattensInto<Flattened>,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SelectionBuilder::<'a, SchemaType, VariablesFields>::select_flattened_field`
